# meus-lares

./: .env.example  .example_env  .gitignore  LICENSE  LICENSE.md  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.deploy.sh  entrypoint.sh  manage.py  requirements.txt
api/: .dockerignore  .example_env  .flake8  Dockerfile  crontab  manage.py  pyproject.toml  requirements.txt  requirements_DEV.txt  start_django.sh  supervisord.conf  test.txt
api/ai/: functions.py  props.py  serializers.py  urls.py  views.py
api/bills/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/condo_files/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/condo_requests/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/interface/: vite.config.ts
api/invoices/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/meus_lares/: asgi.py  daily_tasks.py  exceptions.py  mixin.py  settings.py  storage_backends.py  storages.py  urls.py  wsgi.py
api/notifications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/places/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/relations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/requests/: admin.py  apps.py  models.py  serializers.py  views.py
api/soft_components/: __init__.py  admin.py  managers.py  models.py  serializers.py  views.py
api/static/: index.html
api/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+268 files in other folders)
